# simple-redirect-loadbalancer

./: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  ServerPool.cpp  app.js  config.hpp  main.cpp  utils.cpp  utils.h  watchdog_handler.cpp  watchdog_handler.h
docker/: build.dockerfile  dist.dockerfile
src/: CMakeLists.txt  Generators.hpp  ServerData.h  ServerPool.h  helper.hpp  lambda.h  main.cpp  server.hpp  utils.cpp  utils.h  watchdog_handler.h
